[gd_scene load_steps=11 format=3 uid="uid://dqom42bfhcruj"]

[ext_resource type="PackedScene" uid="uid://1twv1cec0hc6" path="res://game-objects/vehicles/vehicle.tscn" id="1_vb4g1"]
[ext_resource type="Script" uid="uid://ofhugjeihcvu" path="res://game-objects/vehicles/articulated-bus/articulated_bus.gd" id="2_2xaxp"]
[ext_resource type="PackedScene" uid="uid://cx5r114fjgwq7" path="res://game-objects/light/light.tscn" id="3_xwv6l"]
[ext_resource type="PackedScene" uid="uid://4kuxfxcr7jee" path="res://game-objects/vehicles/headlight/headlight.tscn" id="4_xwv6l"]

[sub_resource type="LabelSettings" id="LabelSettings_q147t"]
font_size = 8
shadow_size = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aone0"]
size = Vector2(57, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vyqpc"]
size = Vector2(10.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65tko"]
size = Vector2(51.5, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xaxp"]
size = Vector2(59, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwv6l"]
size = Vector2(42, 22)

[node name="ArticulatedBus" instance=ExtResource("1_vb4g1")]
visible = false
script = ExtResource("2_2xaxp")

[node name="FrontBody" type="Polygon2D" parent="." index="0"]
z_index = 6
color = Color(1, 0.501961, 0.309804, 1)
polygon = PackedVector2Array(-21, -11, 30.5, -11, 30.5, 11, -21, 11)
uv = PackedVector2Array(-366, -51.5, 93, -54.5, 93, 77.5, -373, 79.5)

[node name="Line2D" type="Line2D" parent="FrontBody" index="0"]
position = Vector2(82.0001, -44)
points = PackedVector2Array(-62, 48, -57, 44, -62, 40)
width = 1.0

[node name="LeftRayIndicator" parent="FrontBody" index="1" instance=ExtResource("3_xwv6l")]
position = Vector2(27.0001, -5.99996)
inactive_color = Color(0.328363, 0.188552, 0.0617831, 1)
active_color = Color(0.993088, 0.761047, 0.36313, 1)
ilumination_scale = 0.25

[node name="RightRayIndicator" parent="FrontBody" index="2" instance=ExtResource("3_xwv6l")]
position = Vector2(27.0001, 6.00004)
inactive_color = Color(0.329412, 0.188235, 0.0627451, 1)
active_color = Color(0.992157, 0.760784, 0.364706, 1)
ilumination_scale = 0.25

[node name="LongRayIndicator" parent="FrontBody" index="3" instance=ExtResource("3_xwv6l")]
position = Vector2(10.0001, -4.99996)
inactive_color = Color(0.0998999, 5.17646e-05, 0.34762, 1)
active_color = Color(0.602044, 0.610385, 1, 1)
ilumination_scale = 0.25

[node name="MediumRayIndicator" parent="FrontBody" index="4" instance=ExtResource("3_xwv6l")]
position = Vector2(10.0001, 4.19617e-05)
inactive_color = Color(0.2, 0.364706, 0, 1)
active_color = Color(0.394249, 0.68442, 0, 1)
ilumination_scale = 0.25

[node name="CloseRayIndicator" parent="FrontBody" index="5" instance=ExtResource("3_xwv6l")]
position = Vector2(10.0001, 5.00004)
inactive_color = Color(0.531182, 0, 0.263433, 1)
active_color = Color(1, 0.359538, 0.595255, 1)
ilumination_scale = 0.25

[node name="Label" type="Label" parent="FrontBody" index="6"]
offset_left = -7.0
offset_top = -8.0
offset_right = 8.99996
offset_bottom = 4.0
rotation = 1.5708
text = "12"
label_settings = SubResource("LabelSettings_q147t")
horizontal_alignment = 1

[node name="FrontLink" type="Polygon2D" parent="FrontBody" index="7"]
z_index = -1
position = Vector2(80, -44)
polygon = PackedVector2Array(-101, 33.3, -108.287, 33.3, -111, 34, -112, 35, -114, 37, -111.5, 51, -111.011, 52.7493, -109.062, 54.5, -101, 54.5)
uv = PackedVector2Array(-108.994, 52.8229)

[node name="CollisionArea" type="Area2D" parent="FrontBody" index="8"]
collision_layer = 6
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape2D" parent="FrontBody/CollisionArea" index="0"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_aone0")
disabled = true

[node name="CloseRayCaster" type="RayCast2D" parent="FrontBody" index="9"]
position = Vector2(30.0001, 4.19617e-05)
enabled = false
exclude_parent = false
target_position = Vector2(11, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="MediumRayCaster" type="RayCast2D" parent="FrontBody" index="10"]
position = Vector2(30.0001, 4.19617e-05)
enabled = false
exclude_parent = false
target_position = Vector2(36, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="LongRayCaster" type="RayCast2D" parent="FrontBody" index="11"]
position = Vector2(30.0001, 4.19617e-05)
enabled = false
exclude_parent = false
target_position = Vector2(71, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="LeftRayCaster" type="RayCast2D" parent="FrontBody" index="12"]
position = Vector2(30.0001, 4.19617e-05)
enabled = false
exclude_parent = false
target_position = Vector2(45, -13)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RightRayCaster" type="RayCast2D" parent="FrontBody" index="13"]
position = Vector2(30.0001, 4.19617e-05)
enabled = false
exclude_parent = false
target_position = Vector2(44, 15)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="ForwardBlockadeObserver" type="Area2D" parent="FrontBody" index="14"]
position = Vector2(14.0001, 4.19617e-05)
collision_layer = 4
collision_mask = 4
input_pickable = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontBody/ForwardBlockadeObserver" index="0"]
position = Vector2(21.75, 0)
shape = SubResource("RectangleShape2D_vyqpc")

[node name="BodyArea" type="Area2D" parent="FrontBody" index="15"]
monitoring = false
monitorable = false

[node name="BodyShape" type="CollisionShape2D" parent="FrontBody/BodyArea" index="0"]
position = Vector2(4.75, 0)
shape = SubResource("RectangleShape2D_65tko")

[node name="PathFollower" type="PathFollow2D" parent="FrontBody" index="16"]
position = Vector2(6.10352e-05, 4.19617e-05)
loop = false

[node name="LeftBeam" parent="FrontBody" index="17" instance=ExtResource("4_xwv6l")]
z_index = 100
z_as_relative = false
position = Vector2(30.5, -7)

[node name="RightBeam" parent="FrontBody" index="18" instance=ExtResource("4_xwv6l")]
z_index = 100
z_as_relative = false
position = Vector2(30.5, 5)

[node name="Trailer" type="Node2D" parent="." index="1"]
position = Vector2(-28, 0)

[node name="TrailerBody" type="Polygon2D" parent="Trailer" index="0"]
z_index = 5
z_as_relative = false
position = Vector2(-23, 0)
color = Color(1, 0.501961, 0.309804, 1)
polygon = PackedVector2Array(-24, -11, 18, -11, 18, 11, -24, 11)
uv = PackedVector2Array(-366, -51.5, 93, -54.5, 93, 77.5, -373, 79.5)

[node name="LeftBrakeLight" parent="Trailer/TrailerBody" index="0" instance=ExtResource("3_xwv6l")]
position = Vector2(-24, -9)
inactive_color = Color(0.2, 0, 0, 1)
active_color = Color(1, 0, 0, 1)
ilumination_scale = 0.25

[node name="RightBrakeLight" parent="Trailer/TrailerBody" index="1" instance=ExtResource("3_xwv6l")]
position = Vector2(-24, 9)
inactive_color = Color(0.2, 0, 0, 1)
active_color = Color(1, 0, 0, 1)
ilumination_scale = 0.25

[node name="TrailerLink" type="Polygon2D" parent="Trailer/TrailerBody" index="2"]
z_index = -2
position = Vector2(-83, -44)
polygon = PackedVector2Array(101, 33.3, 108, 33.3, 110.492, 33.9972, 113.313, 35.8829, 114.839, 37.4857, 115.492, 49.0893, 113.168, 51.7759, 111.058, 53.416, 109.132, 54.5, 101.019, 54.5)
uv = PackedVector2Array(-108.994, 52.8229)

[node name="CollisionArea" type="Area2D" parent="Trailer" index="1"]
position = Vector2(-23, 0)
collision_layer = 6
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trailer/CollisionArea" index="0"]
position = Vector2(-6.5, 0)
shape = SubResource("RectangleShape2D_2xaxp")
disabled = true

[node name="BodyArea" type="Area2D" parent="Trailer" index="2"]
position = Vector2(-23, 0)
monitoring = false
monitorable = false

[node name="BodyShape" type="CollisionShape2D" parent="Trailer/BodyArea" index="0"]
position = Vector2(-3, 0)
shape = SubResource("RectangleShape2D_xwv6l")

[node name="PathFollower" type="PathFollow2D" parent="Trailer" index="3"]
position = Vector2(-45, 0)
loop = false
